included all package versions

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -19,9 +19,9 @@ dependencies:
   - boto3=1.9.31
   - requests=2.20
   - pandas=0.23
+  - dask-kubernetes=0.6
   - pip:
     - rasterio==1.0.8
-    - wurlitzer
-    - satsearch
-    - kubernetes
-    - git+https://github.com/dask/dask-kubernetes.git
+    - wurlitzer==1.0.2
+    - satsearch==0.1.0
+    - kubernetes==7.0.0
