--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -16,6 +16,7 @@ dependencies:
   - nodejs=8.12
   - libgdal=2.3.2
   - boto3=1.9
+  - hvplot=0.2
   - requests=2.20
   - pandas=0.23
   - dask-kubernetes=0.6
