--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -4,7 +4,7 @@ channels:
 dependencies:
   - nomkl
   - curl=7.62
-  - python=3.7
+  - python=3.6
   - xarray=0.11
   - dask=0.20.2
   - distributed=1.24
@@ -20,7 +20,7 @@ dependencies:
   - hvplot=0.2
   - requests=2.20
   - pandas=0.23
-  - dask-kubernetes
+  - dask-kubernetes=0.6
   - rasterio=1.0.10
   - pip
 #    - wurlitzer==1.0.2
