--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -21,7 +21,8 @@ dependencies:
   - requests=2.20
   - pandas=0.23
   - dask-kubernetes=0.6
-  - rasterio=1.0.10
+#  - rasterio=1.0.10
   - pip
 #    - wurlitzer==1.0.2
 #    - kubernetes==7.0.0
+     - rasterio=1.0.10
