--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,7 +5,7 @@ dependencies:
   - nomkl
   - curl=7.62
   - python=3.6
-  - xarray=0.11
+#  - xarray=0.11
   - dask=0.20.2
   - distributed=1.24
   - matplotlib=3.0
@@ -24,4 +24,5 @@ dependencies:
   - rasterio=1.0.10
   - pip:
     - wurlitzer==1.0.2
+    - git+git://github.com/scottyhq/xarray@rasterio-env
 
