--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,7 +5,6 @@ dependencies:
   - nomkl
   - curl=7.62
   - python=3.6
-#  - xarray=0.11
   - dask=1.0.0
   - distributed=1.25
   - matplotlib=3.0
@@ -21,8 +20,8 @@ dependencies:
   - requests=2.20
   - pandas=0.23
   - dask-kubernetes=0.6
-  - rasterio=1.0.10
+  - rasterio=1.0.11
   - pip:
     - wurlitzer==1.0.2
-    - git+git://github.com/scottyhq/xarray@rasterio-env
+    - git+git://github.com/scottyhq/xarray@open-rasterio-vrt
 
